--- a/model.qmd
+++ b/model.qmd
@@ -1,20 +1,37 @@
 ---
-title: "model.qmd"
+title: "Model Training"
 execute: 
-  echo: false
+  echo: true
 ---
 
 ```{r}
-#train <- fortune |>
-#  select(revenues_m,profits_m,assets_m,employees) |>
-#  drop_na()
+#| message: false
+library(tidyverse)
+library(primer.data)
+library(dplyr)
+library(readr)
+library(janitor)
+library(stringr)
+library(rstanarm)
 ```
 
 ```{r}
-#fit_obj <- stan_glm(formula = revenues_m ~ profits_m + assets_m + employees,
-#                  data = train,
-#                  refresh = 0,
-#                  seed = 42)
-#
-#fit_obj
+fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE)
+```
+
+```{r}
+train <- fortune |>
+  select(revenues_m,profits_m,assets_m,employees) |>
+  drop_na()
+```
+
+```{r}
+fit_obj <- stan_glm(formula = revenues_m ~ profits_m + assets_m + employees,
+                    data = train,
+                    refresh = 0,
+                    seed = 42)
+```
+
+```{r}
+fit_obj
 ```
