--- a/headquarters.qmd
+++ b/headquarters.qmd
@@ -9,12 +9,50 @@ execute:
 library(tidyverse)
 library(dplyr)
 library(readr)
+library(forcats)
 ```
 
 ```{r}
-fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE)
+fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
+  select(name,headquarters_state,headquarters_city)
 ```
 
 ```{r}
-fortune
+state_hq <- unique(fortune) |>
+  select(headquarters_state) |>
+  drop_na() |>
+  count(headquarters_state) |>
+  filter(n > 0) |>
+  mutate(headquarters_state = fct_reorder(headquarters_state, desc(n)))
+```
+
+```{r}
+city_hq <- unique(fortune) |>
+  select(headquarters_city) |>
+  drop_na() |>
+  count(headquarters_city) |>
+  filter(n > 20) |>
+  mutate(headquarters_city = fct_reorder(headquarters_city, desc(n)))
+```
+
+```{r}
+state_hq |>
+  ggplot(aes(x = headquarters_state, y = n)) +
+  geom_bar(stat = 'identity', fill = '#0000c0') +
+  theme(axis.text.x = element_text(angle = 90)) +
+  labs(title = "Location of Fortune 500 Companies' Headquarters",
+       subtitle = "California, Texas, New York, Illinois, Ohio, and Pensylvania are the most common states.",
+       x = 'Headquarter State Abbreviation',
+       y = 'Count')
+```
+
+```{r}
+city_hq |>
+  ggplot(aes(x = headquarters_city, y = n)) +
+  geom_bar(stat = 'identity', fill = '#0000c0') +
+  theme(axis.text.x = element_text(angle = 90)) +
+  labs(title = "Location of Fortune 500 Companies' Headquarters",
+       subtitle = "New York City, Houston, Chicago, Atlanta, and Dallas are the most common cities.",
+       x = 'Headquarter City',
+       y = 'Count')
 ```
