--- a/headquarters.qmd
+++ b/headquarters.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Headquarter Locations"
 execute: 
-  echo: true
+  echo: false
 ---
 
 ```{r}
@@ -55,4 +55,9 @@ city_hq |>
        subtitle = "New York City, Houston, Chicago, Atlanta, and Dallas are the most common cities.",
        x = 'Headquarter City',
        y = 'Count')
+```
+
+```{r}
+fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE)
+fortune
 ```
