--- a/sector and industry.qmd
+++ b/sector and industry.qmd
@@ -13,9 +13,45 @@ library(forcats)
 ```
 
 ```{r}
-fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE)
+fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
+  select(name,sector,industry)
 ```
 
 ```{r}
-fortune
+business_sect <- unique(fortune) |>
+  select(sector) |>
+  drop_na() |>
+  count(sector) |>
+  mutate(sector = fct_reorder(sector, n, .desc = TRUE))
+```
+
+```{r}
+business_ind <- unique(fortune) |>
+  select(industry) |>
+  drop_na() |>
+  count(industry) |>
+  filter(n > 100) |>
+  mutate(industry = fct_reorder(industry, n, .desc = TRUE))
+```
+
+```{r}
+business_sect |>
+  ggplot(aes(x = sector, y = n)) +
+  geom_bar(stat = 'identity', fill = '#0000c0') +
+  theme(axis.text.x = element_text(angle = 90)) +
+  labs(title = "Business Sectors of Fortune 500 Companies",
+       subtitle = "Financials, technology, energy, healthcare, and retailing are the most common sectors.",
+       x = 'Sector',
+       y = 'Count')
+```
+
+```{r}
+business_ind |>
+  ggplot(aes(x = industry, y = n)) +
+  geom_bar(stat = 'identity', fill = '#0000c0') +
+  theme(axis.text.x = element_text(angle = 90)) +
+  labs(title = "Industries of Fortune 500 Companies",
+       subtitle = "Utilities, Specialty Retailers, Commercial Banks, and Chemicals are the most common industries.",
+       x = 'Industry',
+       y = 'Count')
 ```
