--- a/sources.qmd
+++ b/sources.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Provenance"
+title: "Sources"
 ---
 
 The data was scraped from *fortune.com* and uploaded to *kaggle.com* by Garreth Lee on June 15, 2023 in a .csv file.
