--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,12 @@
 title: "About"
 ---
 
-My name is Rajarshi Mandal, and I am a student at William Diamond Middle School. The code can be found at [my Github account](https://github.com/rajarshi-mandal). This is my final project for [Kane’s Free Data Science Course](https://bootcamp.davidkane.info/). The course is great for anybody that wants to learn about Data Science!
+## About this project
+This website was created as my final project for [Kane’s Free Data Science Course](https://bootcamp.davidkane.info/). I loved this course and would recommend it to anybody that wants to learn about Data Science!
+
+## About Me
+My name is Rajarshi Mandal, and I am a student at William Diamond Middle School. The code for this project can be found at [my Github account](https://github.com/rajarshi-mandal).
+
+## Sources
+
+The data was scraped from *fortune.com* and uploaded to *kaggle.com* by Garreth Lee on June 15, 2023 in a .csv file.
