--- a/revenue and profit.qmd
+++ b/revenue and profit.qmd
@@ -13,15 +13,21 @@ library(forcats)
 
 ```{r}
 fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
-  select(rank, year, revenue_mil, profit_mil, asset_mil) |>
+  select(rank, year, revenue_mil, profit_mil, asset_mil, market_value_mil) |>
   filter(rank <= 500)
 ```
 
 ```{r}
 revenue <- fortune |>
   summarize(mean_revenue_mil = mean(revenue_mil, na.rm = TRUE), .by = year)
-
 revenue$mean_revenue_mil[revenue$year == 2013] <- mean(c(23529.903, 24421.006))
+```
+
+```{r}
+market_value <- fortune |>
+  filter(year >= 2013) |>
+  summarize(mean_market_value_mil = mean(market_value_mil, na.rm = TRUE), .by = year)
+market_value$mean_market_value_mil[market_value$year == 2013] <- 34459.82 - (37372.77 - 34459.82)/2
 ```
 
 ```{r}
@@ -34,28 +40,61 @@ profit <- fortune |>
 asset <- fortune |>
   filter(year >= 2013) |>
   summarize(mean_asset_mil = mean(asset_mil, na.rm = TRUE), .by = year)
+asset$mean_asset_mil[asset$year == 2013] <- 74061.85 - (76292.42 - 74061.85)/2
 ```
 
 ```{r}
 revenue |>
   ggplot(aes(x = year, y = mean_revenue_mil)) +
-  geom_line() +
+  geom_point(color = '#0000c0') +
+  geom_line(color = '#0000c0') +
   scale_x_continuous('Year',
                      breaks = c(1996,1999,2002,2005,2008,2011,2014,2017,2020,2023),
                      limits = c(1996,2023)) +
   scale_y_continuous('Mean Revenue (million $)',
                      breaks = c(10000,15000,20000,25000,30000,35000,40000),
-                     limits = c(9000,36500))
+                     limits = c(9000,36500)) +
+  labs()
+```
+
+```{r}
+market_value |>
+  ggplot(aes(x = year, y = mean_market_value_mil)) +
+  geom_point(color = '#0000c0') +
+  geom_line(color = '#0000c0') +
+  scale_x_continuous('Year',
+                     breaks = c(2013,2015,2017,2019,2021,2023),
+                     limits = c(2013,2023)) +
+  scale_y_continuous('Mean Market Value (million $)',
+                     breaks = c(30000,40000,50000,60000,70000,80000,90000),
+                     limits = c(30000,80000)) +
+  labs()
 ```
 
 ```{r}
 profit |>
   ggplot(aes(x = year, y = mean_profit_mil)) +
-  geom_line()
+  geom_point(color = '#0000c0') +
+  geom_line(color = '#0000c0') +
+  scale_x_continuous('Year',
+                     breaks = c(2013,2015,2017,2019,2021,2023),
+                     limits = c(2013,2023)) +
+  scale_y_continuous('Mean Profit (million $)',
+                     breaks = c(1500,2000,2500,3000,3500,4000),
+                     limits = c(1500,3900)) +
+  labs()
 ```
 
 ```{r}
 asset |>
   ggplot(aes(x = year, y = mean_asset_mil)) +
-  geom_line()
+  geom_point(color = '#0000c0') +
+  geom_line(color = '#0000c0') +
+  scale_x_continuous('Year',
+                     breaks = c(2013,2015,2017,2019,2021,2023),
+                     limits = c(2013,2023)) +
+  scale_y_continuous('Mean Assets (million $)',
+                     breaks = c(70000,80000,90000,100000,110000),
+                     limits = c(70000,112500)) +
+  labs()
 ```
