--- a/monetary statistics.qmd
+++ b/monetary statistics.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Revenue and Profit"
+title: "Revenue, Market Value, Profit, and Assets"
+execute: 
+  echo: false
 ---
 
 ```{r}
@@ -51,10 +53,12 @@ revenue |>
   scale_x_continuous('Year',
                      breaks = c(1996,1999,2002,2005,2008,2011,2014,2017,2020,2023),
                      limits = c(1996,2023)) +
-  scale_y_continuous('Mean Revenue (million $)',
+  scale_y_continuous('Mean Revenue (in millions, USD)',
                      breaks = c(10000,15000,20000,25000,30000,35000,40000),
-                     limits = c(9000,36500)) +
-  labs()
+                     limits = c(9000,36500),
+                     labels = scales::dollar_format()) +
+  labs(title = 'Mean Revenue of Fortune 500 Companies from 1996 to 2023',
+       subtitle = 'There has been steady growth over the years.')
 ```
 
 ```{r}
@@ -65,10 +69,12 @@ market_value |>
   scale_x_continuous('Year',
                      breaks = c(2013,2015,2017,2019,2021,2023),
                      limits = c(2013,2023)) +
-  scale_y_continuous('Mean Market Value (million $)',
+  scale_y_continuous('Mean Market Value (in millions, USD)',
                      breaks = c(30000,40000,50000,60000,70000,80000,90000),
-                     limits = c(30000,80000)) +
-  labs()
+                     limits = c(30000,80000),
+                     labels = scales::dollar_format()) +
+  labs(title = 'Mean Market Value of Fortune 500 Companies from 2013 to 2023',
+       subtitle = 'Market value has recently spiked.')
 ```
 
 ```{r}
@@ -79,10 +85,12 @@ profit |>
   scale_x_continuous('Year',
                      breaks = c(2013,2015,2017,2019,2021,2023),
                      limits = c(2013,2023)) +
-  scale_y_continuous('Mean Profit (million $)',
+  scale_y_continuous('Mean Profit (in millions, USD)',
                      breaks = c(1500,2000,2500,3000,3500,4000),
-                     limits = c(1500,3900)) +
-  labs()
+                     limits = c(1500,3900),
+                     labels = scales::dollar_format()) +
+  labs(title = 'Mean Profit of Fortune 500 Companies from 2013 to 2023',
+       subtitle = 'Profits jumped to record highs in 2022.')
 ```
 
 ```{r}
@@ -93,8 +101,10 @@ asset |>
   scale_x_continuous('Year',
                      breaks = c(2013,2015,2017,2019,2021,2023),
                      limits = c(2013,2023)) +
-  scale_y_continuous('Mean Assets (million $)',
+  scale_y_continuous('Mean Assets (in millions, USD)',
                      breaks = c(70000,80000,90000,100000,110000),
-                     limits = c(70000,112500)) +
-  labs()
+                     limits = c(70000,112500),
+                     labels = scales::dollar_format()) +
+  labs(title = 'Mean Assets of Fortune 500 Companies from 2013 to 2023',
+       subtitle = 'There has been steady growth over the years.')
 ```
