--- a/headquarters.qmd
+++ b/headquarters.qmd
@@ -14,7 +14,8 @@ library(forcats)
 
 ```{r}
 fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
-  select(name,headquarters_state,headquarters_city)
+  select(rank,name,headquarters_state,headquarters_city) |>
+  filter(rank <= 500)
 ```
 
 ```{r}
@@ -30,7 +31,7 @@ city_hq <- unique(fortune) |>
   select(headquarters_city) |>
   drop_na() |>
   count(headquarters_city) |>
-  filter(n > 20) |>
+  filter(n > 50) |>
   mutate(headquarters_city = fct_reorder(headquarters_city, desc(n)))
 ```
 
@@ -40,7 +41,7 @@ state_hq |>
   geom_bar(stat = 'identity', fill = '#0000c0') +
   theme(axis.text.x = element_text(angle = 90)) +
   labs(title = "Location of Fortune 500 Companies' Headquarters",
-       subtitle = "California, Texas, New York, Illinois, Ohio, and Pensylvania are the most common states.",
+       subtitle = "New York, California, Texas, Illinois, Ohio, and Pensylvania are the most common states.",
        x = 'Headquarter State Abbreviation',
        y = 'Count')
 ```
@@ -51,7 +52,7 @@ city_hq |>
   geom_bar(stat = 'identity', fill = '#0000c0') +
   theme(axis.text.x = element_text(angle = 90)) +
   labs(title = "Location of Fortune 500 Companies' Headquarters",
-       subtitle = "New York City, Houston, Chicago, Atlanta, and Dallas are the most common cities.",
+       subtitle = "New York City, Houston, Atlanta, Chicago, and Dallas are the most common cities.",
        x = 'Headquarter City',
        y = 'Count')
 ```
