--- a/model.qmd
+++ b/model.qmd
@@ -14,22 +14,29 @@ library(rstanarm)
 ```
 
 ```{r}
-fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE)
+read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
+  select(year, gained_in_rank) |>
+  drop_na() |>
+  count(gained_in_rank, .by = year)
 ```
 
 ```{r}
-#train <- fortune |>
-#  select(revenues_m, profits_m, assets_m, employees) |>
-#  drop_na()
+train <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
+  select(market_value_mil, year, revenue_mil, profit_mil, asset_mil, employees) |>
+  drop_na()
 ```
 
 ```{r}
-#fit_obj <- stan_glm(formula = revenues_m ~ profits_m + assets_m + employees,
-#                    data = train,
-#                    refresh = 0,
-#                    seed = 42)
+fit_obj <- stan_glm(formula = market_value_mil ~ year + revenue_mil + profit_mil + asset_mil + employees,
+                    data = train,
+                    refresh = 0,
+                    seed = 42)
 ```
 
 ```{r}
-#fit_obj
+fit_obj
+```
+
+```{r}
+
 ```
