--- a/sector and industry.qmd
+++ b/sector and industry.qmd
@@ -14,8 +14,7 @@ library(forcats)
 
 ```{r}
 fortune <- read_csv('data/Cleaned Data.csv', show_col_types = FALSE) |>
-  select(rank, name, sector, industry) |>
-  filter(rank <= 500)
+  select(rank, name, sector, industry)
 ```
 
 ```{r}
